--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,7 +27,7 @@
         <div class="menu-dropdown">
             <ul class="nav-menu">
                 <li><a href="/about.html">About</a></li>
-                <li><a href="/shop.html">Shop</a></li>
+                <li><a href="/pay">Pay</a></li>
                 <li><a href="/menu.html">Menu</a></li>
                 <li><a href="/brew.html">Brew</a></li>
             </ul>
